// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Business owner task list rejected view > matches the snapshot 1`] = `
[
  <h2
    className="margin-top-0"
    data-testid="grt-rejected"
  >
    Your business case has been rejected.
  </h2>,
  <h3>
    Reasons
  </h3>,
  <p>
    Test rejection reason
  </p>,
  <h3>
    Next steps
  </h3>,
  <p
    className="text-pre-wrap"
  >
    Test next steps
  </p>,
  <div
    className="margin-top-4"
  >
    <a
      className="usa-button margin-bottom-2"
      href="/governance-task-list/40e866cb-6bf4-4b1a-8fc6-bf0d8328cdfc"
      onClick={[Function]}
    >
      Return to task list
    </a>
  </div>,
]
`;

exports[`Business owner task list rejected view matches the snapshot 1`] = `
Array [
  <h2
    className="margin-top-0"
    data-testid="grt-rejected"
  >
    Your business case has been rejected.
  </h2>,
  <h3>
    Reasons
  </h3>,
  <p>
    Test rejection reason
  </p>,
  <h3>
    Next steps
  </h3>,
  <p
    className="text-pre-wrap"
  >
    Test next steps
  </p>,
  <div
    className="margin-top-4"
  >
    <a
      className="usa-button margin-bottom-2"
      href="/governance-task-list/40e866cb-6bf4-4b1a-8fc6-bf0d8328cdfc"
      onClick={[Function]}
    >
      Return to task list
    </a>
  </div>,
]
`;
